13079
The following invalid code gives AssertionError:
```scala
object Bug {
  abstract class A[Interesting[T]](value: T)
  new A("hi"){}
}
```
```scala
d:\temp\fun2.scala:2: error: not found: type T
  abstract class A[Interesting[T]](value: T)
                                          ^
Exception in thread "main" java.lang.AssertionError: assertion failed
	at scala.Predef$$.assert(Predef.scala:87)
	at scala.tools.nsc.typechecker.Infer$$Inferencer.qualify$$1(Infer.scala:832)
	at scala.tools.nsc.typechecker.Infer$$Inferencer$$$$anonfun$$checkKindBounds$$1$$$$anonfun$$apply$$6.apply(Infer.scala:847)
	at scala.tools.nsc.typechecker.Infer$$Inferencer$$$$anonfun$$checkKindBounds$$1$$$$anonfun$$apply$$6.apply(Infer.scala:846)
	at scala.List.map(List.scala:734)
	at scala.tools.nsc.typechecker.Infer$$Inferencer$$$$anonfun$$checkKindBounds$$1.apply(Infer.scala:846)
	at scala.tools.nsc.typechecker.Infer$$Inferencer$$$$anonfun$$checkKindBounds$$1.apply(Infer.scala:839)
	at scala.List.foreach(List.scala:763)
	at scala.tools.nsc.typechecker.Infer$$Inferencer.checkKindBounds(Infer.scala:839)
	at scala.tools.nsc.typechecker.Infer$$Inferencer.checkBounds(Infer.scala:737)
	at scala.tools.nsc.typechecker.Infer$$Inferencer.inferMethodInstance(Infer.scala:942)
	at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1689)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2484)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3071)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedBlock(Typers.scala:1369)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2936)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typePrimaryConstrBody(Typers.scala:852)
	at scala.tools.nsc.typechecker.Typers$$Typer.parentTypes(Typers.scala:909)
	at scala.tools.nsc.typechecker.Namers$$Namer.templateSig(Namers.scala:526)
	at scala.tools.nsc.typechecker.Namers$$Namer.classSig(Namers.scala:541)
	at scala.tools.nsc.typechecker.Namers$$Namer.typeSig(Namers.scala:803)
	at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$typeCompleter$$1.apply(Namers.scala:403)
	at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$typeCompleter$$1.apply(Namers.scala:401)
	at scala.tools.nsc.typechecker.Namers$$$$anon$$1.complete(Namers.scala:987)
	at scala.tools.nsc.symtab.Symbols$$Symbol.info(Symbols.scala:491)
	at scala.tools.nsc.symtab.Symbols$$Symbol.initialize(Symbols.scala:601)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2893)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1518)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.List$$.loop$$1(List.scala:254)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedBlock(Typers.scala:1368)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2936)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1518)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.List$$.loop$$1(List.scala:254)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.List$$.loop$$1(List.scala:258)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1156)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedModuleDef(Typers.scala:1054)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2906)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1518)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.List$$.loop$$1(List.scala:254)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2899)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.apply(Analyzer.scala:40)
	at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:247)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.Iterator$$class.foreach(Iterator.scala:382)
	at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
	at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
	at scala.tools.nsc.Global$$Run.compileSources(Global.scala:545)
	at scala.tools.nsc.Global$$Run.compile(Global.scala:629)
	at scala.tools.nsc.Main$$.process(Main.scala:86)
	at scala.tools.nsc.Main$$.main(Main.scala:107)
	at scala.tools.nsc.Main.main(Main.scala)
```
